integrations/cluster-router-eg/k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cluster-router-eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-router
  namespace: default
spec:
  gatewayClassName: cluster-router-eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: cluster-router-proxy
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: cluster-router.example.com
